--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-mongo-sanitize": "2.0.2",
-    "express-rate-limit": "^5.2.6",
+    "express-rate-limit": "5.2.6",
     "helmet": "4.4.1",
-    "hpp": "^0.2.3",
+    "hpp": "0.2.3",
     "joi": "17.4.0",
     "jsonwebtoken": "8.5.1",
     "mongodb": "3.6.4",
-    "mongoose": "5.11.17",
+    "mongoose": "5.11.15",
     "morgan": "1.10.0",
-    "xss-clean": "^0.1.1"
+    "xss-clean": "0.1.1"
   },
   "devDependencies": {
     "husky": "5.0.9",
