--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "mongodb": "3.6.4",
     "mongoose": "5.11.15",
     "morgan": "1.10.0",
+    "pg": "8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0",
     "xss-clean": "0.1.1"
   },
   "devDependencies": {
